# rust_vec

./: Cargo.toml
benches/: benches.rs
src/: lib.rs  vector.rs  vectored.rs
tests/: vectored_tests.rs
