[package]
name = "vectored"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
num = "0.4.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

[[bench]]
name = "benches"
harness = false
